--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "walk": "^2.3.14"
+    "walk": "^2.3.14",
+    "yargs": "^12.0.1"
   }
 }
